(수정) 재고이동등록(창고).html 칼럼수정 품번->담당자

--- a/화면구성파일/재고이동등록(창고).html
+++ b/화면구성파일/재고이동등록(창고).html
@@ -277,7 +277,7 @@
                             입고장소
                         </td>
                         <td>
-                            품번
+                            담당자
                         </td>
                         
                     </tr>   
