(수정) 재고이동등록(창고).html

--- a/화면구성파일/재고이동등록(창고).html
+++ b/화면구성파일/재고이동등록(창고).html
@@ -346,7 +346,7 @@
                             <input type="text"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a>
                         </td>
                         <td>
-                            <input type="text" class="datepicker"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a>
+                            <input type="text"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a>
                         </td>
                         <td>
                             <input type="text"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a>
