--- a/화면구성파일/매입마감(국내거래).html
+++ b/화면구성파일/매입마감(국내거래).html
@@ -66,13 +66,22 @@
             height: 15%;
             border: 1px solid black;
         }
-        #nav{
+        #nav1{
             position: absolute;
+            text-align: center;
             left: 0;
-            bottom: 0;
-            width: 100%;
-            height: 30%;
+            top: 10%;
+            width: 60%;
+            height: 5%;
             border: 1px solid black;
+        }
+        #nav2{
+            background-color: red;
+            position: absolute;
+            left: 60%;
+            width: 40%;
+            height: 5%;
+            border: 100px solid black;
         }
         #sidemenu{
             position: absolute;
@@ -88,12 +97,158 @@
             height: 80%;
             border: 1px solid black;
         }
+        #contents1{
+            position: absolute;
+            padding: 10px;
+            right: 0;
+            top: 15%;
+            width: 85%;
+            height: 10%;
+            border: 1px solid black;
+            z-index: 1;
+        }
+        #contents2{
+            position: absolute;
+            right: 0;
+            top: 25%;
+            width: 85%;
+            height: 35%;
+            border: 1px solid black;
+            z-index: 1;
+        }
+        #contents3{
+            position: absolute;
+            right: 0;
+            top:60%;
+            width: 85%;
+            height: 35%;
+            border: 1px solid black;
+            z-index: 1;
+        }
         #footer{
             position: absolute;
             bottom: 0;
             width: 100%;
             height: 5%;
             border: 1px solid black;
+        }
+        .logo{
+            position: absolute;
+            display: inline-block;
+            height: 100%;
+            width: 100px;
+            left: 20px;
+        }
+        #info{
+            position: absolute;
+            left: 160px;
+            display: inline-block;
+            top: 8px;
+            font-size: 15px;
+
+        }
+        #search{
+            display: inline-block;
+            position: absolute;
+            font-size: 24px;
+            color: gray;
+            top: 40px;
+            left: 160px;
+            width: 80%;
+            height: 35px;
+            margin-bottom: 10px;
+        }
+        .search_button{
+            position: absolute;
+            width: 50px;
+            height: 35px;
+            top: 40px;
+            right: 4%;
+        }
+        #nav1 ul{
+            width: 100%; 
+            margin: auto 0;
+            z-index: 2;
+            list-style: none;
+            /* overflow: hidden; */
+        }
+        #nav1 #gnb>li{
+            float: left;
+            width: 209.2px;
+            height: 50px;
+            text-align: center;
+            border: 1px solid black;
+            position: relative;
+
+        }
+        #nav1 #gnb>li:hover #sub{
+            display: block;
+        }
+        #nav1 #gnb>li a{
+            display: inline-block;
+            padding-top: 10px;
+            width: 100%;
+            height: 50px;
+            border: 1px solid black;
+            background-color: white;
+        }
+        #nav1 #gnb>li a:hover{
+            display: block;
+        }
+        #nav1 #gnb #sub{
+            position: absolute;
+            top: 50px;
+            left: 0;
+            width: 100%;
+            display: none;
+        }
+        #s_nav #lnb li{
+            list-style: none;
+        }
+        #s_nav #lnb li #side1,#side2,#side3,#side4{
+            display: block;
+            border: 1px solid black;
+        }
+        #s_nav #lnb #l_sub1,#l_sub2,#l_sub3,#l_sub4{
+            border-style: none;
+            display: none;
+        }
+        #nav2 button{
+            background-color: white;
+            width: 24%;
+            height: 48px;
+            margin: 0;
+            padding: 0;
+        }
+        #nav2 button:hover{
+            background-color: gray;
+        }
+        #etc_menu{
+            position: absolute;
+            right: 10px;
+            top: 0;
+        }
+        #etc_menu li{
+            list-style: none;
+            display: inline-block;
+            font-size: 5px;
+            padding: 0;
+        }
+        #etc_menu li a{
+            text-decoration: none;
+        }
+        .con1_search{
+            padding:0;
+            text-align: center;
+            position: absolute;
+            top: 25%;
+            left: 18%;
+        }
+        #view1,#view2{
+            width: 100%;
+            text-align: center;
+            border: 1px solid black;
+            
         }
         /* end default */
 
@@ -103,6 +258,7 @@
         }
         input {
             width: 130px;
+            border: none;
         }
         td {
             border: 2px solid white;
@@ -161,14 +317,88 @@
 <body>
     <div id=wrap>
         <header id = header>
-            header<br>
-            <h3>매입마감(국내거래)</h3>
-            <nav id = nav>
-                navigation
-            </nav>
+            <img src="img/ani_spade.png" class="logo"/>
+            <p id=info>회사정보:데이터 받아오기 사원:데이터 받아오기</p>
+            <ul id="etc_menu">
+                <li><a href="#">로그아웃</a></li>
+                <li><a href="#">기타메뉴1</a></li>
+                <li><a href="#">기타메뉴2</a></li>
+                <li><a href="#">기타메뉴3</a></li>
+            </ul>
+            <input type="text" value=" 메뉴 검색" id="search"/>
+            <input type="button" value="검색" class="search_button"/>
         </header>
+        <nav id = nav1>
+            <ul id="gnb">
+                <li><a href="#">물류1</a>
+                    <ul id="sub">
+                        <li><a href="#">물류1-1</a></li>
+                        <li><a href="#">물류1-2</a></li>
+                        <li><a href="#">물류1-3</a></li>
+                        <li><a href="#">물류1-4</a></li>
+                    </ul></li>
+                <li><a href="#">물류2</a>
+                    <ul id="sub">
+                        <li><a href="#">물류1-1</a></li>
+                        <li><a href="#">물류1-2</a></li>
+                        <li><a href="#">물류1-3</a></li>
+                        <li><a href="#">물류1-4</a></li>
+                    </ul></li>
+                <li><a href="#">생산1</a>
+                    <ul id="sub">
+                        <li><a href="#">물류1-1</a></li>
+                        <li><a href="#">물류1-2</a></li>
+                        <li><a href="#">물류1-3</a></li>
+                        <li><a href="#">물류1-4</a></li>
+                    </ul></li>
+                <li><a href="#">생산</a>
+                    <ul id="sub">
+                        <li><a href="#">물류1-1</a></li>
+                        <li><a href="#">물류1-2</a></li>
+                        <li><a href="#">물류1-3</a></li>
+                        <li><a href="#">물류1-4</a></li>
+                    </ul></li>
+            </ul>
+        </nav>
+        <nav id = nav2>
+            <button id="delete" onclick="deletefunc()">삭제</button>
+            <button id="lookup">조회</button>
+            <button id="save">저장</button>
+            <button id="lookup">조회</button>
+        </nav>
         <aside id = sidemenu>
-            sidemenu
+            <div id="s_nav">
+                <ul id="lnb">
+                    <li><a href="#"  id="side1">물류1</a>
+                        <ul id="l_sub1">
+                            <li><a href="#">물류1-1</a></li>
+                            <li><a href="#">물류1-2</a></li>
+                            <li><a href="#">물류1-3</a></li>
+                            <li><a href="#">물류1-4</a></li>
+                        </ul></li>
+                    <li><a href="#" id="side2">물류2</a>
+                        <ul id="l_sub2">
+                            <li><a href="#">물류1-1</a></li>
+                            <li><a href="#">물류1-2</a></li>
+                            <li><a href="#">물류1-3</a></li>
+                            <li><a href="#">물류1-4</a></li>
+                        </ul></li>
+                    <li><a href="#" id="side3">생산1</a>
+                        <ul id="l_sub3">
+                            <li><a href="#">물류1-1</a></li>
+                            <li><a href="#">물류1-2</a></li>
+                            <li><a href="#">물류1-3</a></li>
+                            <li><a href="#">물류1-4</a></li>
+                        </ul></li>
+                    <li><a href="#" id="side4">생산2</a>
+                        <ul id="l_sub4">
+                            <li><a href="#">물류1-1</a></li>
+                            <li><a href="#">물류1-2</a></li>
+                            <li><a href="#">물류1-3</a></li>
+                            <li><a href="#">물류1-4</a></li>
+                        </ul></li>
+                </ul>
+            </div>
         </aside>
         <container id = contents>
             
@@ -360,5 +590,90 @@
             footer
         </footer>
     </div>
+    <script>
+        var side_button1 = document.getElementById('side1');
+        var side_button2 = document.getElementById('side2');
+        var side_button3 = document.getElementById('side3');
+        var side_button4 = document.getElementById('side4');
+        var search_box = document.getElementById('search');
+        var num_box = document.getElementById('num');
+        var save_button = document.getElementById('save');
+        var delete_button = document.getElementById('delete');
+        side_button1.onclick = function(){
+            var l_sub1 = document.getElementById('l_sub1');
+            if(l_sub1.style.display == 'none' || l_sub1.style.display==''){
+            l_sub1.style.display = "block";
+            l_sub1.style.position = "relative";
+            l_sub1.style.marginLeft = "10px";
+            }
+            else{
+                l_sub1.style.display = "none";
+            }
+        }
+        side_button2.onclick = function(){
+            var l_sub2 = document.getElementById('l_sub2');
+            if(l_sub2.style.display == 'none' || l_sub2.style.display==''){
+            l_sub2.style.display = "block";
+            l_sub2.style.position = "relative";
+            l_sub2.style.marginLeft = "10px";
+            }
+            else{
+                l_sub2.style.display = "none";
+            }
+        }
+        side_button3.onclick = function(){
+            var l_sub3 = document.getElementById('l_sub3');
+            if(l_sub3.style.display == 'none' || l_sub3.style.display==''){
+            l_sub3.style.display = "block";
+            l_sub3.style.position = "relative";
+            l_sub3.style.marginLeft = "10px";
+            }
+            else{
+                l_sub3.style.display = "none";
+            }
+        }
+        side_button4.onclick = function(){
+            var l_sub = document.getElementById('l_sub4');
+            if(l_sub4.style.display == 'none' || l_sub4.style.display==''){
+            l_sub4.style.display = "block";
+            l_sub4.style.position = "relative";
+            l_sub4.style.marginLeft = "10px";
+            }
+            else{
+                l_sub4.style.display = "none";
+            }
+        }
+        search_box.onfocus = function(){
+            document.getElementById("search").value = '';
+        }
+        search_box.onblur = function(){
+            document.getElementById("search").value = ' 메뉴 검색';
+        }
+        save_button.onclick = function(){
+            // dao에서 저장
+            console.log('dg');
+            var view1 = document.getElementById('table1');
+    var row = view1.insertRow( view1.rows.length ); 
+    var cell1 = row.insertCell(0);
+    var cell2 = row.insertCell(1);
+    var cell3 = row.insertCell(2);
+    var cell4 = row.insertCell(3);
+    var cell5 = row.insertCell(4);
+    cell1.innerHTML = "<input type='checkbox' name='content'/>";;
+    cell2.innerHTML = "<input type='text'/>";
+    cell4.innerHTML = "<input type='text' />";
+    cell5.innerHTML = "<input type='text' />";
+    cell3.innerHTML =  "<input type='date' />";
+        }
+        delete_button.onclick = function(){
+            //dao에서 체크항목 삭제
+        }
+        function selectAll(selectAll){
+            const checkbox = document.getElementsByName('content');
+            checkbox.forEach((checkbox) => {
+                checkbox.checked = selectAll.checked;
+            })
+        }
+    </script>
 </body>
 </html>
