--- a/화면구성파일/검색등록폼.html
+++ b/화면구성파일/검색등록폼.html
@@ -164,14 +164,14 @@
             border-style: none;
             display: none;
         }
-        button{
+        #nav2 button{
             background-color: white;
             width: 24%;
             height: 48px;
             margin: 0;
             padding: 0;
         }
-        button:hover{
+        #nav2 button:hover{
             background-color: gray;
         }
         #etc_menu{
