--- a/화면구성파일/작업지시등록 수정.html
+++ b/화면구성파일/작업지시등록 수정.html
@@ -289,27 +289,43 @@
         </aside>
         <container1 id = contents1>
             <form id="searchForm">
-                사업장 <input type="text" name="factory" style="width: 75px;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckfactory" style="width: 75px;" disabled>
-                부서 <input type="text" name="department" style="width: 75px;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
-                사원 <input type="text" name="employee" style="width: 75px;" ><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckemployee" style="width: 75px;" disabled>
-                품번범위 <input type="text" name="articleNo1" style="width: 75px;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a> ~ <input type="text" name="articleNo2" style="width: 75px;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><br>
-                작업예정일 <input type="date" name="workDate1" style="width: 130px;"> ~ <input type="date" name="workDate2" style="width: 130px;">
-                <select>
-                    <option>품번</option>
-                    <option>품명</option>
-                    <option>규격</option>
-                </select>
-                <input type="text" name="selectmenu">
-                LOT NO <input type="text" name="lotNo"><br>
-                상태 <select style="width: 300px;">
-                    <option>전체</option>
-                    <option>계획</option>
-                    <option>확정</option>
-                    <option>마감</option>
-                </select>
-                <input type="button" name="requestInquiry" value="청구조회">
-                <input type="button" name="orderInquiry" value="주문조회">
-                <input type="button" name="pdcPlanInquiry" value="생산계획조회"> <!-- get 방식 추후 post 필요시 button방식 후 자바 스크립트 작성 -->
+                <table>
+                    <tr>
+                        <td>
+                            사업장 
+                        </td>
+                        <Td>
+                            <input type="text" name="factory" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckfactory" style="width: 75px;" disabled>
+                        </Td>
+                        <td style="text-align: right;">
+                            작업예정일 
+                        </td>
+                        <td>
+                            <input type="date" name="workDate1" style="width: 130px;"> ~ <input type="date" name="workDate2" style="width: 130px;">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            부서 
+                        </td>
+                        <td>
+                            <input type="text" name="department" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
+                        </td>
+                        <td>
+                            <input type="button" name="requestInquiry" value="청구조회">
+                            <input type="button" name="orderInquiry" value="주문조회">
+                            <input type="button" name="pdcPlanInquiry" value="생산계획조회">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            사원 
+                        </td>
+                        <td>
+                            <input type="text" name="employee" style="width: 75px; background-color: yellow;" ><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckemployee" style="width: 75px;" disabled>
+                        </td>
+                    </tr>
+                </table>
                 </form>
         </container1>
         <container2 id= contents2>
