(추가) 최하단 주석추가함

--- a/화면구성파일/매입마감(국내거래)ver2.html
+++ b/화면구성파일/매입마감(국내거래)ver2.html
@@ -487,5 +487,22 @@
             })
         }
     </script>
+    <!-- hwp 요구사항
+            · 입고처리 또는 반품 처리한   것을 근거로 매입마감을 하는 기능
+            · 회사, 부서, 사원 마감기간 입력받아 조회 후 입고적용하는 기능
+            · 마감기간을 통해 입고적용을   하게되면 입고기간 입력을 통해 
+            입고처리&반품처리가 된 데이터를 선택하여 데이터를   등록하는 기능
+            · 검색 데이터:
+            회사,부서,사원(varchar2),마감,입고기간(date)
+            · 등록데이터:
+            마감번호(varchar2),마감일자(date),거래처,마감구분,수량,단가,합계액(int)
+            · 조회 데이터
+            입고번호(varchar2),입고일자(date),거래처,거래구분,과세구분(varchar2)
+            품번,품명(varchar2),입고,미마감수량(int) -->
+
+            <!-- 모든 텍스트박스를 직접입력하는 작동방식은 아닙니다 '입고적용' 버튼으로 자동입력되는 부분이 있습니다 -->
+
+            <!-- (1) 입고적용 : 입고처리 내역을 입고건별로 사용자가 확인한 후 매입마감 처리 대상
+                으로 선택한 입고건만 매입마감 처리 작업을 수행할때 사용하는 기능이다 -->
 </body>
 </html>
