재고이동등록 수정중

--- a/화면구성파일/재고이동등록(사업장)ver2.html
+++ b/화면구성파일/재고이동등록(사업장)ver2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>재고이동등록(창고)</title>
+    <title>재고이동등록(사업장)</title>
     <style>
         *{
             margin: 0;
@@ -202,7 +202,8 @@
             border: 1px solid black;
             
         }
-        /* end default 밑으로 css 추가함*/
+        /* end default */
+
         .con1_search {
             margin: 10px;
             
@@ -306,6 +307,10 @@
                 </ul>
             </div>
         </aside>
+        <!-- 사업장,부서,사원
+        이동기간, 출고창고, 출고장소
+        담당자, 입고창고, 입고장소
+        관리구분, 프로젝트, 품번 -->
         <container1 id = contents1>
             <table class="con1_search">
                 <tr>
