--- a/화면구성파일/BOM 등록.html
+++ b/화면구성파일/BOM 등록.html
@@ -9,7 +9,7 @@
     <script language="javascript">
         function showPopup() { window.open("https://google.com", "a", "width=400, height=300, left=500, top=400"); }
     </script>
-    <title>생산자재출고</title>
+    <title>BOM등록</title>
     <style>
         *{
             margin: 0;
@@ -56,8 +56,7 @@
         }
         #contents1{
             position: absolute;
-            padding: 10px;
-            right: 0;
+            left: 15%;
             top: 15%;
             width: 85%;
             height: 10%;
@@ -66,19 +65,10 @@
         }
         #contents2{
             position: absolute;
-            right: 0;
+            left: 15%;
             top: 25%;
             width: 85%;
-            height: 30%;
-            border: 1px solid black;
-            z-index: 1;
-        }
-        #contents3{
-            position: absolute;
-            right: 0;
-            top:55%;
-            width: 85%;
-            height: 40%;
+            height: 70%;
             border: 1px solid black;
             z-index: 1;
         }
@@ -194,57 +184,26 @@
         #etc_menu li a{
             text-decoration: none;
         }
-        .con1_search{
-            padding:0;
-            text-align: center;
-            position: absolute;
-            top: 25%;
-            left: 18%;
-        }
-    /* 컨텐츠부 css */
+        /* 컨텐츠 css부 */
+        /* 조회부 */
         #searchForm {
             height: 100%;
-            margin-left: 10px;
-            margin-top: 5px;
+            margin: 10px 10px;
         }
-
-        /* 테이블 css */
-        #MDTable,#MDDetailTable{
-            width: 100%;
-            text-align: center;
-            border: 1px solid black;
-        }
-        
-        /* 컨테이너 파트 */
-        #MDDetail {
-            width: 100%;
-            height: 100%;
+        /* 컨테이너 스타일부 */
+        #workOrderInfo {
             overflow: scroll;
-        }
-        
-        #MDInfo{
+            height: 97%;
             width: 100%;
-            height: 80%;
-            overflow: scroll;
+        }
+        /* 합계 출력부 */
+        #resultWindow{
+            height: 3%;
+            background-color: gray;
+            line-height: 5%;
         }
 
-        #pdcInfo::after{
-            content: "";
-            display: block;
-            clear: both;
-        }
-
-        /* 출력부 스타일*/
-        #detailPrint1{
-            border: 1px solid;
-        }
-
-        #detailPrint2{
-            border: 1px solid;
-            height: 9%;
-        }
-        /* 출력부 스타일 종료 */
-        /* 컨테이너 파트 종료 */
+/* 컨테이너 스타일불 종료 */
     </style>    
 </head>
 <body>
@@ -294,10 +253,10 @@
             </ul>
         </nav>
         <nav id="nav2">
-            <button id="delete" onclick="deletefunc()">삭제</button>
-            <button id="lookup">조회</button>
-            <button id="save">저장</button>
-            <button id="lookup">조회</button>
+            <button name="delete">삭제</button>
+            <button name="lookup">조회</button>
+            <button name="lookup">조회</button>
+            <button name="lookup">조회</button>
         </nav>
         <aside id = sidemenu>
             <div id="s_nav">
@@ -334,119 +293,82 @@
             </div>
         </aside>
         <container1 id = contents1>
-            <!-- 조회검색 폼 -->
             <form id="searchForm">
                 <table>
                     <tr>
                         <td>
-                            사업장 
+                            모품목
                         </td>
+                        <Td>
+                            <input type="text" name="factory" style="width: 120px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckfactory" style="width: 120px;" disabled>
+                        </Td>
+                        <!-- 모품목 규격 -->
                         <td>
-                            <input type="text" name="factory" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckfactory" style="width: 75px;" disabled>
+                            <input type="text" style="width: 150px; background-color: skyblue;" disabled>
                         </td>
+                        <!-- 모품목 단위 -->
                         <td>
-                            출고기간
-                        </td>
-                        <td>
-                            <input type="date" name="MDDate1" style="width: 130px; background-color: yellow;"> ~ <input type="date" name="MDDate2" style="width: 130px; background-color: yellow;">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            부서
-                        </td>
-                        <td>
-                            <input type="text" name="department" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
-                        </td>
-                        <td>
-                            <input type="button" name="requestMD" value="출고요청">
-                            <input type="button" name="stockCheck" value="재고확인">
+                            <input type="text" style="width: 120px; background-color: skyblue;" disabled>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            사원 
+                            기준일자
                         </td>
                         <td>
-                            <input type="text" name="department" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled ><br>
+                            <input type="date" name="department" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a>
+                        </td>
+                        <td>
+                            <input type="button" name="requestInquiry" value="BOM 복사">
+                            <input type="button" name="orderInquiry" value="일괄자재변경">
                         </td>
                     </tr>
                 </table>
-            </form>
+                </form>
         </container1>
-
-        <container2 id="contents2">
-            <!-- 디테일부 -->
-            <div id="MDDetail">
-                <table id="MDDetailTable">
+        <container2 id= contents2>
+            <div id="workOrderInfo">
+                <table id="workOrderTable">
                     <thead>
                         <td><input type="checkbox" name="content" onclick="selectAll(this)"/></td>
-                        <td>출고번호</td>
-                        <td>출고일자</td>
-                        <td>출고창고</td>
-                        <td>출고장소</td>
-                        <td>담당자</td>
-                        <td>비고</td>
+                        <td>순번</td>
+                        <td>품번코드</td>
+                        <td>품명</td>
+                        <td>규격</td>
+                        <td>단위</td>
+                        <td>정미수량</td>
+                        <td>LOSS(%)</td>
+                        <td>필요수량</td>
+                        <td>시작일자</td>
+                        <td>종료일자</td>
+                        <td>외주구분</td>
+                        <td>사용여부</td>
                     </thead>
                     <!-- 테스트용 데이터, 추후 표현식으로 수정필요 -->
                     <tbody>
                         <td><input type="checkbox" value = "check1" id="check" name="content"/></td>
                         <td><input type="text"/></td>
-                        <td><input type="date"/></td>
                         <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="date"/></td>
+                        <td><input type="date"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                     </tbody>
                 </table>
             </div>
-                <!-- 디테일부 종료 -->
-            </container2>
-            <container3 id="contents3">
-                <div id="MDInfo">
-                    <table id="MDTable">
-                        <thead>
-                            <td><input type="checkbox" name="content" onclick="selectAll(this)"/></td>
-                            <td>NO.</td>
-                            <td>품번</td>
-                            <td>품명</td>
-                            <td>규격</td>
-                            <td>단위</td>
-                            <td>요청수량</td>
-                            <td>출고수량</td>
-                            <td>LOT No.</td>
-                            <td>비고</td>
-                        </thead>
-                        <!-- 테스트용 데이터, 추후 표현식으로 수정필요 -->
-                        <tbody>
-                            <td><input type="checkbox" value = "check1" id="check" name="content"/></td>
-                            <td><input type="text"/></td>
-                            <td><input type="text"/></td>
-                            <td><input type="text"/></td>
-                            <td><input type="text"/></td>
-                            <td><input type="text"/></td>
-                            <td><input type="text"/></td>
-                            <td><input type="text"/></td>
-                            <td><input type="text"/></td>
-                            <td><input type="text"/></td>
-                        </tbody>
-                    </table>
-                    <!-- 출력부 1 -->
-                </div>
-                    <div id="detailPrint1">
-                        관리구분 <input type="text" name="controlCondition" style="width: 75px;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckfactory" style="width: 75px;" disabled>
-                        지시수량 <input type="text" name="printQuantity" disabled><br>
-                        모품목 <input type="text" name="parentItem" disabled><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a>
-                        모품목명 <input type="text" name="parentItemName" disabled> 지시번호 <input type="text" name="num" disabled>
-                    </div>
-                    <!-- 출력부 1 종료 -->
-                    <!-- 출력부 2 -->
-            <div id="detailPrint2">
-                재고    사업장별 현재고 <input type="text" name="stockPerFactory">
-                창고/장소별 현재고 <input type="text" name="stockPerCargo">
+            <!-- 합계 출력부 -->
+            <div id="resultWindow">
+                합 계 <span style="margin-left: 100px;">정미수량 <input type="text"></span><span style="margin-left: 100px;">필요수량 <input type="text"></span>
             </div>
-            <!-- 출력부 2 종료 -->
-        </container3>
+            <!-- 합계 출력부 종료 -->
+        </container2>
         <footer id= footer>
             footer
         </footer>
@@ -457,9 +379,6 @@
         var side_button3 = document.getElementById('side3');
         var side_button4 = document.getElementById('side4');
         var search_box = document.getElementById('search');
-        var num_box = document.getElementById('num');
-        var save_button = document.getElementById('save');
-        var delete_button = document.getElementById('delete');
         side_button1.onclick = function(){
             var l_sub1 = document.getElementById('l_sub1');
             if(l_sub1.style.display == 'none' || l_sub1.style.display==''){
@@ -510,28 +429,7 @@
         search_box.onblur = function(){
             document.getElementById("search").value = ' 메뉴 검색';
         }
-        save_button.onclick = function(){
-            // dao에서 저장
-            var view1 = document.getElementById('table1');
-            var view2 = document.getElementById('view2');
-            focus = document.activeElement;
-            if(view1 == focus){
-            var row = view1.insertRow( view1.rows.length ); 
-            var cell1 = row.insertCell(0);
-            var cell2 = row.insertCell(1);
-            var cell3 = row.insertCell(2);
-            var cell4 = row.insertCell(3);
-            var cell5 = row.insertCell(4);
-            cell1.innerHTML = "<input type='checkbox' name='content'/>";;
-            cell2.innerHTML = "<input type='text'/>";
-            cell4.innerHTML = "<input type='text' />";
-            cell5.innerHTML = "<input type='text' />";
-            cell3.innerHTML =  "<input type='date' />";
-            }
-        }
-        delete_button.onclick = function(){
-            //dao에서 체크항목 삭제
-        }
+
         function selectAll(selectAll){
             const checkbox = document.getElementsByName('content');
             checkbox.forEach((checkbox) => {
