신규 작성 및 수정사항 반영본

--- a/화면구성파일/외주발주확정.html
+++ b/화면구성파일/외주발주확정.html
@@ -456,7 +456,7 @@
                 </div>
                  <!-- 합계 출력부 -->
                 <div id="resultWindow">
-                    합 계 <span style="margin-left: 100px;">정미수량 <input type="text"></span><span style="margin-left: 100px;">확정수량 <input type="text"></span><span style="margin-left: 100px;">금액 <input type="text"></span>
+                    합 계 <span style="margin-left: 100px;"></span>정미수량 <input type="text"><span style="margin-left: 100px;">확정수량 <input type="text"></span><span style="margin-left: 100px;">금액 <input type="text"></span>
                 </div>
                     <!-- 합계 출력부 종료 -->
         </container3>
