--- a/화면구성파일/외주마감.html
+++ b/화면구성파일/외주마감.html
@@ -9,7 +9,7 @@
     <script language="javascript">
         function showPopup() { window.open("https://google.com", "a", "width=400, height=300, left=500, top=400"); }
     </script>
-    <title>외주발주등록</title>
+    <title>외주마감</title>
     <style>
         *{
             margin: 0;
@@ -56,7 +56,8 @@
         }
         #contents1{
             position: absolute;
-            left: 15%;
+            padding: 10px;
+            right: 0;
             top: 15%;
             width: 85%;
             height: 10%;
@@ -65,10 +66,19 @@
         }
         #contents2{
             position: absolute;
-            left: 15%;
+            right: 0;
             top: 25%;
             width: 85%;
-            height: 70%;
+            height: 35%;
+            border: 1px solid black;
+            z-index: 1;
+        }
+        #contents3{
+            position: absolute;
+            right: 0;
+            top:60%;
+            width: 85%;
+            height: 35%;
             border: 1px solid black;
             z-index: 1;
         }
@@ -184,28 +194,35 @@
         #etc_menu li a{
             text-decoration: none;
         }
-        /* 컨텐츠 css부 */
-        /* 조회부 */
-        #searchForm {
-            height: 100%;
-            margin: 10px 10px;
+        .con1_search{
+            padding:0;
+            text-align: center;
+            position: absolute;
+            top: 25%;
+            left: 18%;
         }
-        /* 컨테이너 스타일부 */
-        #workOrderInfo {
-            overflow: scroll;
-            height: 97%;
+        #view1,#view2{
             width: 100%;
+            text-align: center;
+            border: 1px solid black;
+            
         }
-        
-         /* 합계 출력부 */
-         #resultWindow{
-            height: 3%;
+    /* 컨텐츠 css부 */
+        #workOrderDetail{
+            height: 100%;
+            overflow: scroll;
+        }
+        #workOrderInfo {
+            height: 95%;
+            width: 100%;
+            overflow: scroll;
+        }
+           /* 합계 출력부 */
+           #resultWindow{
+            height: 5%;
             background-color: gray;
             line-height: 5%;
         }
-
-
-/* 컨테이너 스타일불 종료 */
     </style>    
 </head>
 <body>
@@ -255,10 +272,10 @@
             </ul>
         </nav>
         <nav id="nav2">
-            <button name="delete">삭제</button>
-            <button name="lookup">조회</button>
-            <button name="lookup">조회</button>
-            <button name="lookup">조회</button>
+            <button id="delete" onclick="deletefunc()">삭제</button>
+            <button id="lookup">조회</button>
+            <button id="save">저장</button>
+            <button id="lookup">조회</button>
         </nav>
         <aside id = sidemenu>
             <div id="s_nav">
@@ -299,70 +316,93 @@
                 <table>
                     <tr>
                         <td>
-                            사업장
+                            사업장 
                         </td>
                         <td>
-                            <input type="text" name="factory" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
+                            <input type="text" name="factory" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckfactory" style="width: 75px;" disabled>
                         </td>
-                        <td>
-                            외주처
+                        <td style="text-align: right;">
+                            마감일
                         </td>
-                        <td>
-                            <input type="text" name="factory" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
-                        </td>
+                        <Td>
+                            <input type="date" name="workDate1" style="width: 130px;  background-color: yellow;"> ~ <input type="date" name="workDate2" style="width: 130px; background-color: yellow;">
+                        </Td>
                     </tr>
                     <tr>
                         <td>
-                            부서
+                            부서 
                         </td>
                         <td>
-                            <input type="text" name="factory" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
+                            <input type="text" name="department" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
                         </td>
                         <td>
-                            <input type="button" name="requestMD" value="청구조회" onclick="showPopup()">
-                            <input type="button" name="requestMD" value="주문조회" onclick="showPopup()">
-                            <input type="button" name="requestMD" value="생산계획조회" onclick="showPopup()">
+                            <input type="button" name="confirm" value="실적적용">
+                            <input type="button" name="cancel" value="실적일괄적용"> 
                         </td>
                     </tr>
-                    <tr>
-                        <td>
-                            사원
-                        </td>
-                        <td>
-                            <input type="text" name="factory" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
-                        </td>
-                    </tr>
+                    <Tr>
+                        <Td>
+                            사원 
+                        </Td>
+                        <Td>
+                            <input type="text" name="employee" style="width: 75px; background-color: yellow;" ><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckemployee" style="width: 75px;" disabled><br>
+                        </Td>
+                    </Tr>
                 </table>
-            </form>
+                </form>
         </container1>
-        <container2 id= contents2>
+        <container2 id="contents2">
+           <!-- 디테일부 -->
+           <div id="workOrderDetail">
+            <table id="workOrderDetailTable">
+                <thead>
+                    <td><input type="checkbox" name="content" onclick="selectAll(this)"/></td>
+                    <td>외주비마감번호</td>
+                    <td>마감일자</td>
+                    <td>외주공정</td>
+                    <td>외주처</td>
+                    <td>비고</td>
+                    <!-- 미 필요시 삭제해도 무관 -->
+                    <td>전표구분</td>
+                    <td>과세구분</td>
+                    <td>세무구분</td>
+                </thead>
+                <!-- 테스트용 데이터, 추후 표현식으로 수정필요 -->
+                <tbody>
+                    <td><input type="checkbox" value = "check1" id="check" name="content"/></td>
+                    <td><input type="text"/></td>
+                    <td><input type="date"/></td>
+                    <td><input type="text"/></td>
+                    <td><input type="text"/></td>
+                    <td><input type="text"/></td>
+                    <td><input type="text"/></td>
+                    <td><input type="text"/></td>
+                    <td><input type="text"/></td>
+                </tbody>
+            </table>
+        </div>
+        <!-- 디테일부 종료 -->
+        </container2>
+        <container3 id="contents3">
             <div id="workOrderInfo">
                 <table id="workOrderTable">
                     <thead>
                         <td><input type="checkbox" name="content" onclick="selectAll(this)"/></td>
-                        <td>외주지시번호</td>
-                        <td>발주일</td>
-                        <td>납기일</td>
+                        <td>순번</td>
                         <td>품번</td>
                         <td>품명</td>
                         <td>규격</td>
                         <td>단위</td>
-                        <td>지시수량</td>
+                        <td>수량</td>
                         <td>단가</td>
-                        <td>금액</td>
-                        <td>상태</td>
-                        <td>LOT 번호</td>
-                        <td>검사</td>
-                        <td>고객</td>
+                        <td>공급가</td>
+                        <td>부가세</td>
+                        <td>합계액</td>
                         <td>비고</td>
                     </thead>
                     <!-- 테스트용 데이터, 추후 표현식으로 수정필요 -->
                     <tbody>
                         <td><input type="checkbox" value = "check1" id="check" name="content"/></td>
-                        <td><input type="text"/></td>
-                        <td><input type="date"/></td>
-                        <td><input type="date"/></td>
-                        <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
@@ -377,12 +417,12 @@
                     </tbody>
                 </table>
             </div>
-            <!-- 합계 출력부 -->
-            <div id="resultWindow">
-                합 계 <span style="margin-left: 100px;"></span>지시수량 <input type="text"><span style="margin-left: 100px;">금액 <input type="text"></span>
+             <!-- 합계 출력부 -->
+             <div id="resultWindow">
+                합 계 <span style="margin-left: 50px;">수량<input type="text"></span><span style="margin-left: 50px;">공급가<input type="text"></span><span style="margin-left: 50px;">부가세<input type="text"></span><span style="margin-left: 50px;">합계액<input type="text"></span>
             </div>
             <!-- 합계 출력부 종료 -->
-        </container2>
+        </container3>
         <footer id= footer>
             footer
         </footer>
@@ -393,6 +433,9 @@
         var side_button3 = document.getElementById('side3');
         var side_button4 = document.getElementById('side4');
         var search_box = document.getElementById('search');
+        var num_box = document.getElementById('num');
+        var save_button = document.getElementById('save');
+        var delete_button = document.getElementById('delete');
         side_button1.onclick = function(){
             var l_sub1 = document.getElementById('l_sub1');
             if(l_sub1.style.display == 'none' || l_sub1.style.display==''){
@@ -443,7 +486,28 @@
         search_box.onblur = function(){
             document.getElementById("search").value = ' 메뉴 검색';
         }
-
+        save_button.onclick = function(){
+            // dao에서 저장
+            var view1 = document.getElementById('table1');
+            var view2 = document.getElementById('view2');
+            focus = document.activeElement;
+            if(view1 == focus){
+            var row = view1.insertRow( view1.rows.length ); 
+            var cell1 = row.insertCell(0);
+            var cell2 = row.insertCell(1);
+            var cell3 = row.insertCell(2);
+            var cell4 = row.insertCell(3);
+            var cell5 = row.insertCell(4);
+            cell1.innerHTML = "<input type='checkbox' name='content'/>";;
+            cell2.innerHTML = "<input type='text'/>";
+            cell4.innerHTML = "<input type='text' />";
+            cell5.innerHTML = "<input type='text' />";
+            cell3.innerHTML =  "<input type='date' />";
+            }
+        }
+        delete_button.onclick = function(){
+            //dao에서 체크항목 삭제
+        }
         function selectAll(selectAll){
             const checkbox = document.getElementsByName('content');
             checkbox.forEach((checkbox) => {
