--- a/화면구성파일/외주실적등록.html
+++ b/화면구성파일/외주실적등록.html
@@ -9,7 +9,7 @@
     <script language="javascript">
         function showPopup() { window.open("https://google.com", "a", "width=400, height=300, left=500, top=400"); }
     </script>
-    <title>외주발주등록</title>
+    <title>작업실적등록</title>
     <style>
         *{
             margin: 0;
@@ -56,7 +56,8 @@
         }
         #contents1{
             position: absolute;
-            left: 15%;
+            padding: 10px;
+            right: 0;
             top: 15%;
             width: 85%;
             height: 10%;
@@ -65,10 +66,19 @@
         }
         #contents2{
             position: absolute;
-            left: 15%;
+            right: 0;
             top: 25%;
             width: 85%;
-            height: 70%;
+            height: 35%;
+            border: 1px solid black;
+            z-index: 1;
+        }
+        #contents3{
+            position: absolute;
+            right: 0;
+            top:60%;
+            width: 85%;
+            height: 35%;
             border: 1px solid black;
             z-index: 1;
         }
@@ -184,28 +194,33 @@
         #etc_menu li a{
             text-decoration: none;
         }
+        .con1_search{
+            padding:0;
+            text-align: center;
+            position: absolute;
+            top: 25%;
+            left: 18%;
+        }
+
         /* 컨텐츠 css부 */
-        /* 조회부 */
-        #searchForm {
-            height: 100%;
-            margin: 10px 10px;
-        }
         /* 컨테이너 스타일부 */
-        #workOrderInfo {
+        #workOrderDetail{
             overflow: scroll;
-            height: 97%;
+            height: 100%;
+        }
+        #workOrderInfo {
             width: 100%;
+            overflow: scroll;
+            height: 94%;
         }
-        
-         /* 합계 출력부 */
-         #resultWindow{
-            height: 3%;
+        /* 컨테이너 스타일부 종료 */
+       /* 합계 출력부 */
+       #resultWindow{
+            height: 6%;
             background-color: gray;
-            line-height: 5%;
+            line-height: 2%;
         }
-
-
-/* 컨테이너 스타일불 종료 */
+        /* 컨테이너 파트 종료 */
     </style>    
 </head>
 <body>
@@ -255,10 +270,10 @@
             </ul>
         </nav>
         <nav id="nav2">
-            <button name="delete">삭제</button>
-            <button name="lookup">조회</button>
-            <button name="lookup">조회</button>
-            <button name="lookup">조회</button>
+            <button id="delete" onclick="deletefunc()">삭제</button>
+            <button id="lookup">조회</button>
+            <button id="save">저장</button>
+            <button id="lookup">조회</button>
         </nav>
         <aside id = sidemenu>
             <div id="s_nav">
@@ -298,51 +313,53 @@
             <form id="searchForm">
                 <table>
                     <tr>
+                        <Td>
+                            사업장 
+                        </Td>
                         <td>
-                            사업장
+                            <input type="text" name="factory" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckfactory" style="width: 75px;" disabled>
+                        </td>
+                        <td style="text-align: right;">
+                            지시일 
                         </td>
                         <td>
-                            <input type="text" name="factory" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
-                        </td>
-                        <td>
-                            외주처
-                        </td>
-                        <td>
-                            <input type="text" name="factory" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            부서
-                        </td>
-                        <td>
-                            <input type="text" name="factory" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
-                        </td>
-                        <td>
-                            <input type="button" name="requestMD" value="청구조회" onclick="showPopup()">
-                            <input type="button" name="requestMD" value="주문조회" onclick="showPopup()">
-                            <input type="button" name="requestMD" value="생산계획조회" onclick="showPopup()">
+                            <input type="date" name="workDate1" style="width: 130px;"> ~ <input type="date" name="workDate2" style="width: 130px;">
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            사원
+                            부서 
                         </td>
                         <td>
-                            <input type="text" name="factory" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
+                            <input type="text" name="department" style="width: 75px; background-color: yellow;"><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckdepartment" style="width: 75px;" disabled >
+                        </td>
+                        <td>
+                            <input type="button" name="materialUse" value="자재사용">
+                            <input type="button" name="searchDetail" value="검색상세">
                         </td>
                     </tr>
+                    <Tr>
+                        <td>
+                            사원 
+                        </td>
+                        <td>
+                            <input type="text" name="employee" style="width: 75px; background-color: yellow;" ><a href="#" onclick="showPopup();"> <i class="fas fa-search"></i></a><input type="text" name="ckemployee" style="width: 75px;" disabled>
+                        </td>
+                    </Tr>
                 </table>
-            </form>
+                 <!-- get 방식 추후 post 필요시 button방식 후 자바 스크립트 작성 -->
+                </form>
         </container1>
-        <container2 id= contents2>
-            <div id="workOrderInfo">
-                <table id="workOrderTable">
-                    <thead>
+        <container2 id="contents2">
+             <div id="workOrderDetail">
+                <table id="workOrderDetailTable">
+                    <thead> 
                         <td><input type="checkbox" name="content" onclick="selectAll(this)"/></td>
-                        <td>외주지시번호</td>
-                        <td>발주일</td>
-                        <td>납기일</td>
+                        <td>작업지시번호</td>
+                        <td>자재출고상태</td>
+                        <td>외주처</td>
+                        <td>지시일</td>
+                        <td>완료일</td>
                         <td>품번</td>
                         <td>품명</td>
                         <td>규격</td>
@@ -350,8 +367,9 @@
                         <td>지시수량</td>
                         <td>단가</td>
                         <td>금액</td>
+                        <td>실적수량</td>
                         <td>상태</td>
-                        <td>LOT 번호</td>
+                        <td>LOT번호</td>
                         <td>검사</td>
                         <td>고객</td>
                         <td>비고</td>
@@ -360,8 +378,11 @@
                     <tbody>
                         <td><input type="checkbox" value = "check1" id="check" name="content"/></td>
                         <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
                         <td><input type="date"/></td>
                         <td><input type="date"/></td>
+                        <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
                         <td><input type="text"/></td>
@@ -377,12 +398,52 @@
                     </tbody>
                 </table>
             </div>
-            <!-- 합계 출력부 -->
-            <div id="resultWindow">
-                합 계 <span style="margin-left: 100px;"></span>지시수량 <input type="text"><span style="margin-left: 100px;">금액 <input type="text"></span>
-            </div>
-            <!-- 합계 출력부 종료 -->
         </container2>
+        <container3 id="contents3">
+            <div id="workOrderInfo">
+                <table id="workOrderTable">
+                    <thead>
+                        <td><input type="checkbox" name="content" onclick="selectAll(this)"/></td>
+                        <td>작업실적번호</td>
+                        <td>자재사용유무</td>
+                        <td>실적일</td>
+                        <td>공정</td>
+                        <td>작업장</td>
+                        <td>구분</td>
+                        <td>실적구분</td>
+                        <td>실적수량</td>
+                        <td>LOT번호</td>
+                        <td>검사</td>
+                        <td>실적담당</td>
+                        <td>부적합명</td>
+                        <td>비고</td>
+                    </thead>
+                    <!-- 테스트용 데이터, 추후 표현식으로 수정필요 -->
+                    <tbody>
+                        <td><input type="checkbox" value = "check1" id="check" name="content"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="date"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                        <td><input type="text"/></td>
+                    </tbody>
+                </table>
+            </div>
+            <!-- 컨테이너 출력 종료 -->
+             <!-- 합계 출력부 -->
+             <div id="resultWindow">
+                합 계 <span style="margin-left: 100px;"></span>실적수량 <span style="margin-left: 10px;"><input type="text"></span>
+            </div>
+                <!-- 합계 출력부 종료 -->
+        </container3>
         <footer id= footer>
             footer
         </footer>
@@ -393,6 +454,9 @@
         var side_button3 = document.getElementById('side3');
         var side_button4 = document.getElementById('side4');
         var search_box = document.getElementById('search');
+        var num_box = document.getElementById('num');
+        var save_button = document.getElementById('save');
+        var delete_button = document.getElementById('delete');
         side_button1.onclick = function(){
             var l_sub1 = document.getElementById('l_sub1');
             if(l_sub1.style.display == 'none' || l_sub1.style.display==''){
@@ -443,7 +507,28 @@
         search_box.onblur = function(){
             document.getElementById("search").value = ' 메뉴 검색';
         }
-
+        save_button.onclick = function(){
+            // dao에서 저장
+            var view1 = document.getElementById('table1');
+            var view2 = document.getElementById('view2');
+            focus = document.activeElement;
+            if(view1 == focus){
+            var row = view1.insertRow( view1.rows.length ); 
+            var cell1 = row.insertCell(0);
+            var cell2 = row.insertCell(1);
+            var cell3 = row.insertCell(2);
+            var cell4 = row.insertCell(3);
+            var cell5 = row.insertCell(4);
+            cell1.innerHTML = "<input type='checkbox' name='content'/>";;
+            cell2.innerHTML = "<input type='text'/>";
+            cell4.innerHTML = "<input type='text' />";
+            cell5.innerHTML = "<input type='text' />";
+            cell3.innerHTML =  "<input type='date' />";
+            }
+        }
+        delete_button.onclick = function(){
+            //dao에서 체크항목 삭제
+        }
         function selectAll(selectAll){
             const checkbox = document.getElementsByName('content');
             checkbox.forEach((checkbox) => {
